--- a/userInterface/templates/userInterface/rate-list.html
+++ b/userInterface/templates/userInterface/rate-list.html
@@ -5,7 +5,7 @@
 
 {% block body %}
 <section class="min-vh-85 mb-8">
-    <div class=" page-header align-items-start min-vh-50 pt-5 pb-11 m-3 border-radius-lg" style=" background-image: url('../../../static/images/home-back.jpg');">
+    <div class=" page-header align-items-start min-vh-50 pt-5 pb-11 m-3 border-radius-lg" style=" background-image: url('../../../static/images/tada.jpg');">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-5 text-center mx-auto pt-lg-5">
@@ -14,17 +14,70 @@
       </div>
     </div>
     <div class="container">
-      <div class="row mt-lg-n10 mt-md-n11 mt-n10 justify-content-center">
+                <div class="row mt-lg-n10 mt-md-n11 mt-n10 justify-content-center">
+                <div class="col-lg-3 col-sm-6 mb-lg-0 mb-4">
+                   <a href="{% url 'all-user-rate' %}">
+                        <div class="card">
+                        <div class="card-body p-3">
+                            <div class="row">
+                                <div class="col-8">
+                                    <div class="numbers">
+                                        <p class="text-sm mb-0 text-capitalize font-weight-bold"> التوصيات على
+                                            الأسهم</p>
+
+                                    </div>
+                                </div>
+                                <div class="col-4 text-start">
+                                    <div class="icon icon-shape bg-maal shadow text-center border-radius-md">
+                                        <i class="fas fa-sticky-note text-lg opacity-10" aria-hidden="true"></i>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                   </a>
+                </div>
+                <div class="col-lg-3 col-sm-6 mb-lg-0 mb-4">
+               <a href="{% url 'all-user-expect' %}">
+                                       <div class="card">
+                        <div class="card-body p-3">
+                            <div class="row">
+                                <div class="col-8">
+                                    <div class="numbers">
+                                        <p class="text-sm mb-0 text-capitalize font-weight-bold">التوقعات لأرباح
+                                            الشركات</p>
+                                        <h5 class="font-weight-bolder mb-0">
+                                            <span class="text-success text-sm font-weight-bolder"></span>
+                                        </h5>
+                                    </div>
+                                </div>
+                                <div class="col-4 text-start">
+                                    <div class="icon icon-shape bg-maal shadow text-center border-radius-md">
+                                        <i class="fas fa-coins text-lg opacity-10" aria-hidden="true"></i>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+               </a>
+                </div>
+            </div>
+
+      <div class="row pt-3">
                <div class="col-lg-12 col-md-12 mb-md-0 mb-4">
           <div class="card z-index-0 ">
-                        <div class="card-header p-3">
+<div class="card-header pb-0">
                             <div class="row  justify-content-center">
                                 <div class="col-12 justify-content-center">
-                                    <form method="get" class="form-inline justify-content-center">
+                                <button class="btn btn-primary py-2 bg-maal text-white" onclick="myFunction()"><i class="fas fa-search"></i></button>
+
+<div id="myDIV">
+                                    <form method="post" class="form-inline justify-content-center">
                                         {% csrf_token %}
 
                                         {% for filed in myfilter.form %}
-                                            <div class="form-group col-2  py-2">
+                                            <div class="form-group col-12 col-lg-2  py-2">
 
                                                 {{ filed }}
                                             </div>
@@ -32,10 +85,11 @@
                                         {% endfor %}
                                         <button class=" btn btn-primary py-2 bg-maal text-white">بحث</button>
                                     </form>
+</div>
                                 </div>
                             </div>
                         </div>
-            <div class="card-body px-0 pb-2">
+              <div class="card-body px-0 pb-2">
               <div class="table-responsive">
                                         <table style="margin:0 auto;" class="table table-max table-bordered align-items-center mb-auto">
                                             <thead class="text_black">
@@ -142,5 +196,28 @@
         document.getElementById("id_analyst").className = "form-control";
         document.getElementById("id_analyst").setAttribute('placeholder', 'البحث باسم المحلل');
 
+    </script>
+     <script>
+        document.getElementById("id_company").className = "form-control";
+        document.getElementById("id_company").setAttribute('placeholder', 'البحث باسم الشركة');
+        document.getElementById("id_code").className = "form-control";
+        document.getElementById("id_code").setAttribute('placeholder', 'البحث بكود الشركة');
+        document.getElementById("id_date_of_rate").className = "form-control";
+        document.getElementById("id_date_of_rate").setAttribute('type', 'date');
+        document.getElementById("id_date_of_rate").setAttribute('placeholder', 'التوصية إلى');
+        document.getElementById("id_end_of_rate").className = "form-control";
+        document.getElementById("id_end_of_rate").setAttribute('type', 'date');
+        document.getElementById("id_end_of_rate").setAttribute('placeholder', 'التوصية من');
+        document.getElementById("id_analyst").className = "form-control";
+        document.getElementById("id_analyst").setAttribute('placeholder', 'البحث باسم المحلل');
+  var x = document.getElementById("myDIV");
+  x.style.display = "none";
+        function myFunction() {
+  if (x.style.display === "none") {
+    x.style.display = "block";
+  } else {
+    x.style.display = "none";
+  }
+}
     </script>
 {% endblock scripts %}
