--- a/office/templates/office/add-analyst.html
+++ b/office/templates/office/add-analyst.html
@@ -10,6 +10,9 @@
     <div class="card mb-4">
         <div class="card-header pb-0 p-3">
             <h6 class="mb-1 text-bolder">!ضافة</h6>
+            <div class="row pt-2">
+                {% include 'partials/_messages.html' %}
+            </div>
         </div>
         <div class="card-body p-3">
             <div class="row">
