--- a/office/templates/office/add-category.html
+++ b/office/templates/office/add-category.html
@@ -15,6 +15,12 @@
             <div class="row">
                 <div class="col-xl-10 col-md-10 mb-xl-0 mb-2">
                     <div class="card card-blog card-plain">
+                        <div class="card-header">
+                                        <div class="row pt-2">
+                {% include 'partials/_messages.html' %}
+            </div>
+
+                        </div>
                         <div class="card-body px-1 pb-0">
                             <form method="post">
                              {% csrf_token %}
