--- a/userInterface/templates/userInterface/rate-profile.html
+++ b/userInterface/templates/userInterface/rate-profile.html
@@ -49,7 +49,9 @@
                     <h6 class="mb-1 text-dark font-weight-bold text-sm">القطاع</h6>
                   </div>
                   <div class="d-flex align-items-center text-sm">
-                                          <span class="text-xs"> {{ rate.CompanyEntered.category.name }}</span>
+                       <a href="{% url 'user-company' rate.CompanyEntered.pk %}">
+                                                            <h6 class="text-xs  mb-0">{{ rate.CompanyEntered.name }}</h6>
+                                                        </a>
 
                   </div>
                 </li>
