--- a/userInterface/templates/userInterface/analyst-profile.html
+++ b/userInterface/templates/userInterface/analyst-profile.html
@@ -5,7 +5,7 @@
 
 {% block body %}
 <section class="min-vh-85 mb-8">
-    <div class=" page-header align-items-start min-vh-50 pt-5 pb-11 m-3 border-radius-lg" style=" background-image: url('../../../static/images/back.jpg');">
+    <div class=" page-header align-items-start min-vh-50 pt-5 pb-11 m-3 border-radius-lg" style=" background-image: url('../../../static/images/maal.jpeg');">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-5 text-center mx-auto pt-lg-5">
@@ -14,8 +14,8 @@
       </div>
     </div>
     <div class="container">
-      <div class="row mt-lg-n10 mt-md-n11 mt-n10 justify-content-center">
-                     <div class="col-lg-12">
+      <div class="row  mt-lg-n10 mt-md-n11 mt-n10 justify-content-center">
+                     <div class="col-lg-12 pt-6">
                 <div class="card card-body blur shadow-blur mx-4 mt-n6 overflow-hidden">
         <div class="row gx-4">
           <div class="col-auto">
@@ -76,8 +76,6 @@
               <hr class="horizontal gray-light my-4">
               <ul class="list-group">
                 <li class="list-group-item border-0 ps-0 pt-0 text-sm"><strong class="text-dark">الأسم:</strong> &nbsp; {{ analyst.name }}</li>
-                <li class="list-group-item border-0 ps-0 text-sm"><strong class="text-dark">الهاتف:</strong> &nbsp; {{ analyst.phone }}</li>
-                <li class="list-group-item border-0 ps-0 text-sm"><strong class="text-dark">البريد الألكترونى:</strong> &nbsp; {{ analyst.email }}</li>
                 <li class="list-group-item border-0 ps-0 pb-0">
                   <strong class="text-dark text-sm">Social:</strong> &nbsp;
                   <a class="btn btn-twitter btn-simple mb-0 ps-1 pe-2 py-0" href="https://twitter.com/{{ analyst.tiwtterAccount }}">
