--- a/static/css/soft-ui-dashboard.css
+++ b/static/css/soft-ui-dashboard.css
@@ -23299,13 +23299,16 @@ p,
 .text-xs {
   font-size: 0.75rem !important;
 }
+.sent {
+        width: 2rem !important;
 
+}
 .text-xxs {
+    text-align: center;
       font-weight: bolder;
     font-size: 0.85rem;
     line-height: 2vh !important;
     height: 2vh !important;
-
 }
 table, th, td {
   border: 1px solid #aa952d !important;
