--- a/userInterface/templates/userInterface/rate-profile.html
+++ b/userInterface/templates/userInterface/rate-profile.html
@@ -14,8 +14,8 @@
       </div>
     </div>
     <div class="container">
-      <div class="row mt-lg-n10 mt-md-n11 mt-n10 justify-content-center">
-          <div class="col-lg-8">
+      <div class="row pt-3 justify-content-center">
+          <div class="col-lg-12">
           <div class="card h-100 box-shadow">
             <div class="card-header pb-0 p-3">
               <div class="row d-flex justify-content-between">
@@ -25,107 +25,90 @@
               </div>
             </div>
             <div class="card-body p-3 pb-0">
-              <ul class="list-group">
-                <li class="list-group-item border-0 d-flex justify-content-between ps-0 mb-2 border-radius-lg">
-                  <div class="d-flex flex-column">
-                    <h6 class="mb-1 text-dark font-weight-bold text-sm">تاريخ التوصية</h6>
-                  </div>
-                  <div class="d-flex align-items-center text-sm">
-                                          <span class="text-xs"> {{ rate.RecommendDate }}</span>
-
-                  </div>
-                </li>
-                  <li class="list-group-item border-0 d-flex justify-content-between ps-0 mb-2 border-radius-lg">
-                  <div class="d-flex flex-column">
-                    <h6 class="mb-1 text-dark font-weight-bold text-sm">الشركة</h6>
-                  </div>
-                  <div class="d-flex align-items-center text-sm">
-                                          <span class="text-xs"> {{ rate.CompanyEntered.name }}</span>
-
-                  </div>
-                </li>
-                  <li class="list-group-item border-0 d-flex justify-content-between ps-0 mb-2 border-radius-lg">
-                  <div class="d-flex flex-column">
-                    <h6 class="mb-1 text-dark font-weight-bold text-sm">القطاع</h6>
-                  </div>
-                  <div class="d-flex align-items-center text-sm">
-                       <a href="{% url 'user-company' rate.CompanyEntered.pk %}">
-                                                            <h6 class="text-xs  mb-0">{{ rate.CompanyEntered.name }}</h6>
+              <div class="table-responsive">
+                                        <table style="margin:0 auto;" class="table table-max table-bordered align-items-center mb-auto">
+                                            <thead class="text_black">
+                                            <tr>
+                                                 <th class="text-center text-xxs sent" >
+                                                   الشركة
+                                                </th>
+  <th class="text-center text-xxs sent" >
+                                                   شؤكة الأبحاث
+                                                </th>
+ <th class="text-center   text-xxs sent">
+                                                    المحلل
+                                                </th>
+                                                <th class="text-center   text-xxs sent">
+                                                    التوصية
+                                                </th>
+                                                <th class="text-center   text-xxs sent">
+                                                    السعر وقت التوصية
+                                                </th>
+                                                <th class="text-center   text-xxs sent">
+                                                   السعر المستهدف
+                                                </th>
+                                                <th class="text-center   text-xxs sent">
+                                                   التغير
+                                                </th>
+                                                <th class="text-center   text-xxs sent">
+                                                   السعر الحالى
+                                                </th>
+                                                <th class="text-center   text-xxs sent">
+                                                    التغير
+                                                </th>
+                                            </tr>
+                                            </thead>
+                                            <tbody>
+                                                <tr>
+                                                    <td class="align-middle text-center text-xxs">
+                                                        <a href="{% url 'user-company' rate.CompanyEntered.pk %}">
+                                                            <h6 class="text-xxs  mb-0">{{ rate.CompanyEntered.name }}</h6>
                                                         </a>
-
-                  </div>
-                </li>
-                  <li class="list-group-item border-0 d-flex justify-content-between ps-0 mb-2 border-radius-lg">
-                  <div class="d-flex flex-column">
-                    <h6 class="mb-1 text-dark font-weight-bold text-sm">شركة الأبحاث</h6>
-                  </div>
-                  <div class="d-flex align-items-center text-sm">
-                                          <span class="text-xs"> {{ rate.ResearchCompany }}</span>
-
-                  </div>
-                </li>
-                <li class="list-group-item border-0 d-flex justify-content-between ps-0 mb-2 border-radius-lg">
-                  <div class="d-flex flex-column">
-                    <h6 class="text-dark mb-1 font-weight-bold text-sm">المحلل</h6>
-                   <a href="{% url 'user-interface' rate.AnalayticName.pk %}"> <span class="badge badge-sm bg-maal text-xs">تفاصيل</span></a>
-                  </div>
-                  <div class="d-flex align-items-center text-sm">
-                     {{ rate.AnalayticName.name }}
-                  </div>
-                </li>
-                <li class="list-group-item border-0 d-flex justify-content-between ps-0 mb-2 border-radius-lg">
-                  <div class="d-flex flex-column">
-                    <h6 class="text-dark mb-1 font-weight-bold text-sm">القيمة العادلة</h6>
-                  </div>
-                  <div class="d-flex align-items-center text-sm">
-                    {{ rate.FairValue }}
-                  </div>
-                </li>
-                <li class="list-group-item border-0 d-flex justify-content-between ps-0 mb-2 border-radius-lg">
-                  <div class="d-flex flex-column">
-                    <h6 class="text-dark mb-1 font-weight-bold text-sm">التغير</h6>
-                  </div>
-                  <div class="d-flex align-items-center text-sm">
-                    {% if rate.changeFair %}
-                                                           <i class="fas fa-arrow-down text-danger" aria-hidden="true"></i>
+                                                    </td>
+ <td class="align-middle text-center text-xxs">
+                                                        <p class="text-xxs  mb-0">{{ rate.ResearchCompany.name }}</p>
+                                                    </td>
+                                                 <td class="align-middle text-center text-xxs">
+                                                       <a href="{% url 'user-interface' rate.AnalayticName.pk %}">
+                                                            <p class="text-xxs  mb-0">{{ rate.AnalayticName.name }}</p>
+                                                       </a>
+                                                    </td>
+                                                    <td class="align-middle text-center text-xxs">
+                                                        <p class="text-xxs  mb-0">{{ rate.get_Recommendation_display }}</p>
+                                                    </td>
+                                                    <td class="align-middle text-center text-xxs">
+                                                        <p class="text-xxs  mb-0">{{ rate.CurrenncyValue }}</p>
+                                                    </td>
+                                                    <td class="align-middle text-center text-xxs">
+                                                        <p class="text-xxs  mb-0">{{ rate.FairValue }}</p>
+                                                    </td>
+                                                    <td class="align-middle text-center text-xxs">
+                                                       {% if rate.changeFair %}
                                                            <p class="text-xxs text-danger  mb-0">{{ rate.fair_percentage |floatformat:-2 }}</p>
                                                         {% else %}
-                                                           <i class="fas fa-arrow-up text-success" aria-hidden="true"></i>
                                                            <p class="text-xxs text-success  mb-0">{{ rate.fair_percentage |floatformat:-2 }}</p>
                                                         {% endif %}
-                  </div>
-                </li>
-                <li class="list-group-item border-0 d-flex justify-content-between ps-0 border-radius-lg">
-                  <div class="d-flex flex-column">
-                    <h6 class="text-dark mb-1 font-weight-bold text-sm">السعر السوقى</h6>
-                  </div>
-                  <div class="d-flex align-items-center text-sm">
-                    {{ rate.MarketValue }}
-                  </div>
-                </li>
-                              <li class="list-group-item border-0 d-flex justify-content-between ps-0 mb-2 border-radius-lg">
-                  <div class="d-flex flex-column">
-                    <h6 class="text-dark mb-1 font-weight-bold text-sm">التغير</h6>
-                  </div>
-                  <div class="d-flex align-items-center text-sm">
-                      {% if rate.changeMarket %}
-                                                                                                                      <i class="fas fa-arrow-down text-danger" aria-hidden="true"></i>
+                                                    </td>
+                                                    <td class="align-middle text-center text-xxs">
+                                                        <p class="text-xxs  mb-0">{{ rate.MarketValue }}</p>
+                                                    </td>
+                                                    <td class="align-middle text-center text-xxs">
+                                                       {% if rate.changeMarket %}
                                                            <p class="text-xxs text-danger  mb-0">{{ rate.market_percentage |floatformat:-2 }}</p>
                                                         {% else %}
-                                                                                                                      <i class="fas fa-arrow-up text-success" aria-hidden="true"></i>
                                                            <p class="text-xxs text-success  mb-0">{{ rate.market_percentage |floatformat:-2 }}</p>
                                                         {% endif %}
-                  </div>
-                </li>
-   <li class="list-group-item border-0 d-flex justify-content-between ps-0 border-radius-lg">
-                  <div class="d-flex flex-column">
-                    <h6 class="text-dark mb-1 font-weight-bold text-sm">السعر المستهدف</h6>
-                  </div>
-                  <div class="d-flex align-items-center text-sm">
-                    {{ rate.CurrenncyValue }}
-                  </div>
-                </li>
-              </ul>
+                                                    </td>
+
+                                                </tr>
+
+
+                                            </tbody>
+                                        </table>
+
+
+              </div>
+
             </div>
           </div>
         </div>
