--- a/userInterface/templates/userInterface/expectreal-list.html
+++ b/userInterface/templates/userInterface/expectreal-list.html
@@ -127,7 +127,10 @@
                             <tr>
                                 <td>
 
-                                        <p class=" text-xxs">{{ item.ResearchCompany.name }}</p>
+                                          <a href="{% url 'user-research' item.ResearchCompany.pk %}">
+
+                                                        <p class="text-xxs  mb-0">{{ item.ResearchCompany.name }}</p>
+                                                             </a>
                                 </td>
                                 <td>
 
