--- a/userInterface/templates/userInterface/rate-list.html
+++ b/userInterface/templates/userInterface/rate-list.html
@@ -133,7 +133,10 @@
                                                         </a>
                                                     </td>
  <td class="align-middle text-center text-xxs">
+                                                             <a href="{% url 'user-research' item.ResearchCompany.pk %}">
+
                                                         <p class="text-xxs  mb-0">{{ item.ResearchCompany.name }}</p>
+                                                             </a>
                                                     </td>
                                                     <td class="align-middle text-center text-xxs">
                                                         <p class="text-xxs  mb-0">{{ item.get_Recommendation_display }}</p>
